test/fail/api/string/string_to_i_over_max.lly
#[
ValueError: Value exceeds allowed range.
Traceback:
    from [C]: in string::to_i
    from string_to_i_over_max.lly:8: in __main__
]#

"9223372036854775808".to_i()
